@@ -195,41 +195,6 @@ class DatasetContext extends RawDKANEntityContext {
   }
 
   /**
-   * @Given /^I fill in the resources field "([^"]*)" with "([^"]*)"$/
-   *
-   * Fill in the 'Resources' field on a Dataset form.
-   */
-  public function iFillInTheResourcesFieldWith($field, $value) {
-    $session = $this->getSession();
-    $page = $session->getPage();
-
-    $element = $page->findField($field);
-    if (!$element) {
-      throw new ElementNotFoundException($session, NULL, 'named', $field);
-    }
-    $page->fillField($field, $value);
-
-    // Trigger all needed key events in order for the autocomplete to be triggered.
-    // Just filling the field with a value is not enough.
-    // TODO: Is there a better way to do this?
-    $chars = str_split($value);
-    $last_char = array_pop($chars);
-    // Delete last char.
-    $session->getDriver()->keyDown($element->getXpath(), 8);
-    $session->getDriver()->keyUp($element->getXpath(), 8);
-    // Re-add last char.
-    $session->getDriver()->keyDown($element->getXpath(), $last_char);
-    $session->getDriver()->keyUp($element->getXpath(), $last_char);
-    $this->dkanContext->iWaitForSeconds(5);
-
-    $title = $page->find(
-      'xpath',
-      $session->getSelectorsHandler()->selectorToXpath('xpath', '//li[.="' . $value . '"]')
-    );
-    $title->click();
-  }
-
-  /**
    * @Then I should see all published datasets
    */
   public function iShouldSeeAllPublishedDatasets() {
